2007-07-02  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins.Setup.ProgressMonitoring/ConsoleProgressMonitor.cs,
	  Mono.Addins.Setup.ProgressMonitoring/ProgressStatusMonitor.cs,
	  Mono.Addins.Setup.ProgressMonitoring/NullProgressMonitor.cs,
	  Mono.Addins.Setup/IProgressMonitor.cs: Track api changes.
	* Mono.Addins.Setup/SetupService.cs, Mono.Addins.Setup/AddinStore.cs:
	  Added new overload for ResolveDependencies.
	* Mono.Addins.Setup/SetupTool.cs: Added new CheckInstall command. Fixed
	  some issues with add-in id comparison.
	* Mono.Addins.Setup/AddinRepositoryEntry.cs,
	  Mono.Addins.Setup/RepositoryRegistry.cs: When looking for
	  installable add-ins, sort the result by version number. Some fix in
	  the code that compares ids.

2007-05-07  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins.Setup/SetupService.cs: When creating a package,
	  generating a valid file name when the add-in doesn't have an ID.
	  Fixed the generated html page. Don't add the go-mono repository by
	  default.
	* Mono.Addins.Setup/AddinInfo.cs: Generate a better default name when
	  not provided.
	* Mono.Addins.Setup/RepositoryRegistry.cs: Added method for registering
	  a repository without updating it.

2007-05-04  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins.mdp: Updated.
	* Mono.Addins/ExtensionContext.cs: Fixed GetExtensionObjects overload
	  which was not using the correct reuseCachedInstance value.
	* Mono.Addins/ExtensionTree.cs: Improved error message. When looking
	  for a type in an assembly, avoid throwing an exception too early,
	  since it may be found in other assemblies.
	* Mono.Addins.Database/AddinDatabase.cs: In the addin info cache, also
	  store information about unsuccessful lookups, to avoid looking for
	  an add-in again if we found that it doesn't exist. In Update(),
	  don't use verbose output by default.

2007-04-04  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins.Setup.ProgressMonitoring/NullProgressMonitor.cs: Fix
	  warning.