@@ -1,6 +1,9 @@
+
+KEY_FILE=$(top_srcdir)/mono-addins.snk
 ASSEMBLY_COMPILER_COMMAND = mcs
-ASSEMBLY_COMPILER_FLAGS =  -langversion:ISO-1 -noconfig -codepage:utf8 -warn:4 -debug -d:DEBUG
+ASSEMBLY_COMPILER_FLAGS = -keyfile:$(KEY_FILE) -langversion:ISO-1 -noconfig -codepage:utf8 -warn:4 -debug -d:DEBUG
 ASSEMBLY = ../bin/Mono.Addins.Setup.dll
+ASSEMBLY_NAME=Mono.Addins.Setup
 COMPILE_TARGET = library
 PC_FILES_IN = mono-addins-setup.pc.in
 PROJECT_REFERENCES = ../bin/Mono.Addins.dll
@@ -10,6 +13,7 @@ BUILD_DIR = ../bin
 all: $(ASSEMBLY)
 
 FILES =  \
+	AssemblyInfo.cs \
 	Mono.Addins.Setup.ProgressMonitoring/ConsoleProgressMonitor.cs \
 	Mono.Addins.Setup.ProgressMonitoring/LogTextWriter.cs \
 	Mono.Addins.Setup.ProgressMonitoring/NullProgressMonitor.cs \
@@ -23,6 +27,7 @@ FILES =  \
 	Mono.Addins.Setup/AddinSystemConfiguration.cs \
 	Mono.Addins.Setup/AddinSystemConfigurationReaderWriter.cs \
 	Mono.Addins.Setup/AddinSystemConfigurationSerializer.cs \
+	Mono.Addins.Setup/ConsoleAddinInstaller.cs \
 	Mono.Addins.Setup/InstallException.cs \
 	Mono.Addins.Setup/IProgressMonitor.cs \
 	Mono.Addins.Setup/Package.cs \
@@ -55,7 +60,14 @@ DLL_REFERENCES =
 
 $(ASSEMBLY) $(ASSEMBLY).mdb: $(build_sources) $(build_resources) $(build_datafiles) 
 	mkdir -p $(dir $(ASSEMBLY))		
-
 	$(ASSEMBLY_COMPILER_COMMAND) $(ASSEMBLY_COMPILER_FLAGS) -out:$@ -target:$(COMPILE_TARGET) $(build_sources) $(build_resources_embed) $(build_references_ref)
+
+install-data-local:
+	echo "$(GACUTIL) /i $(ASSEMBLY) /f $(GACUTIL_FLAGS)";  \
+	$(GACUTIL) /i $(ASSEMBLY) /f $(GACUTIL_FLAGS) || exit 1;
+
+uninstall-local:
+	echo "$(GACUTIL) /u $(ASSEMBLY_NAME) $(GACUTIL_FLAGS)"; \
+	$(GACUTIL) /u $(ASSEMBLY_NAME) $(GACUTIL_FLAGS) || exit 1;
 
 include $(top_srcdir)/Makefile.include
